MDEV-24333 Data race in os_file_pread at os/os0file.cc:3308 on os_n_file_reads

os_n_file_reads: make Atomic_counter and correct the semantics of an imprecise
counter.

Reviewed by: Marko Mäkelä